2022/04/06
• Added new meme background: boomer post.
2022/02/22
• Slash command support for macros replaces older shorthand command.
• Removed most old-style commands now that they've been replaced with slash commands.
• Removed all metacommands.
• Echo command now has a transform attribute.
2022/02/21
• Slash command support for praise and shame.
2022/02/19
• Slash command support for generating memes.
• Emoji report can be ordered by most recent or most popular.
• Fixed bug that interfered with reactions to funny numbers.
2022/02/18
• Slash command support for rolling dice.
• Slash command support for reporting and resolving bugs.
• Slash command support for adding and receiving advice.
• Slash command support for muting and unmuting bot.
• Slash command support for tabooing and untabooing words.
2022/01/31
• Slash command support for echo.
2022/01/19
• Slash command support for adding and retrieving names.
• Slash command support for adding, listing, and deleting events.
2021/10/04
• Slash command to report emoji usage.
2021/10/04\n' +
• First supported slash command: Patch notes!
2021/04/06
• Bot will react :nice: instead of saying "Nice!" if nice react exists.
2021/02/23
• Updated default message.
2021/02/18
• Track emojis in messages as well as reacts.
• Update tracked emoji names if they change on the server.
2021/02/08
• Added emoji tracking.
2021/01/30
• Added alias "request feature" for "report bug".
2020/10/22
• uwu metacommand
2020/09/30
• Shorthands are now dynamic rather than hardcoded.
• meme command now honors line breaks in input.
2020/09/16
• Shorthands for long pieces of text: !navy and !has.
• meme command works with metacommands.
2020/09/15
• User avatar appears behind meme text.
• Ability to delete bugs through Discord.
2020/09/04
• Bot can now make memes.
2020/08/08
• Bot ignores excessive   spaces.
2020/07/31
• Edit bad commands into good ones!
• Improved alarm handling.
2020/07/24