@@ -1,16 +1,7 @@
 const PATCH_NOTES = 
+	'2022/04/15\n' +
+	'• Added new meme background: space cowboy.\n' +
 	'2022/04/06\n' +
-	'• Added new meme background: boomer post.\n' +
-	'2022/02/22\n' +
-	'• Slash command support for macros replaces older shorthand command.\n' +
-	'• Removed most old-style commands now that they\'ve been replaced with slash commands.\n'+
-	'• Removed all metacommands.\n' +
-	'• Echo command now has a transform attribute.\n' +
-	'2022/02/21\n' +
-	'• Slash command support for praise and shame.\n' +
-	'2022/02/19\n' +
-	'• Slash command support for generating memes.\n' +
-	'• Emoji report can be ordered by most recent or most popular.\n' +
-	'• Fixed bug that interfered with reactions to funny numbers.\n';
+	'• Added new meme background: boomer post.\n';
 
 module.exports = { PATCH_NOTES };
