@@ -1,3 +1,5 @@
+2022/04/15
+• Added new meme background: space cowboy.
 2022/04/06
 • Added new meme background: boomer post.
 2022/02/22
